syntax = "proto3";

package com.hugo.demo.liveItemPrice;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message LiveItemPriceEntity {
  string metal_id = 1;
  double performance = 2;
  double ask_value = 3;
  double bid_value = 4;
  double value = 5;
  google.protobuf.Timestamp dateTime = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

